admin dashboard | custom tailwind

--- a/ptcpclien/src/index.css
+++ b/ptcpclien/src/index.css
@@ -14,3 +14,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ant-layout-sider-collapsed {
+  font-size: 0.5rem;
+}
+.logo {
+  background: #4e73df;
+}
+  h2 {
+    color: #fff;
+    font-weight: 700;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: '1rem 0rem 2rem 0px';
+    font-size: '0.9rem ';
+  }
+
+.sidebar-items {
+  background: #4e73df;
+}
+.ant-menu-dark.ant-menu-dark:not(.ant-menu-horizontal)
+  .ant-menu-item-selected {
+  background: transparent;
+  font-weight: 700;
+}
+
+.ant-menu-item {
+  display: flex;
+  align-items: center;
+
+  font-size: 1rem !important;
+}
